- Fixed connect-menu z-index, added spacing to gallery items on campaign page.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16080,7 +16080,7 @@ input:checked + .slider:before {
   position: fixed;
   right: 0;
   top: 180px;
-  z-index: 999 -1;
+  z-index: 998;
   list-style: none;
   font-size: 2rem;
 }
